# services_debugger

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: main.yml
app/: dumpers.py  main.py  singleton.py  ssh_conn_mngr.py  task_mngr.py
app/api/: hosts.py
app/core/: dumpers.py  singleton.py  ssh_conn_mngr.py  task_mngr.py
app/db/: hosts.py
app/models/: host.py  task.py
docker/: Dockerfile
services_debugger/: database.py  host_model.py  main.py  singleton.py  ssh_conn_mngr.py
tests/: conftest.py  test_hosts_api.py  test_log_dump.py  test_pcap_dump.py  test_ssh_conn_mngr.py  test_task_mngr.py
tests/core/: test_log_dump.py  test_pcap_dump.py  test_ssh_conn_mngr.py  test_task_mngr.py
