[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "service_debugger"
version = "0.0.2"
description = "Service for debug other microservices"
authors = [{ name = "Vladimir Muzyka", email = "vladimir.muzyka@gmail.com" }]
requires-python = ">=3.8.0,<4"
dependencies = [
    "paramiko",
    "fastapi[standard]",
    "sqlalchemy",
]

[dependency-groups]
test = [
    "pytest",
    "docker",
    "scapy",
    "httpx",
]
linting = [
    "flake8",
    "flake8-pylint",
    "pyproject-flake8",
]

[tool.uv]
package = false
