[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "service_debugger"
version = "0.0.2"
description = "Service for debug other microservices"
authors = [{ name = "Vladimir Muzyka", email = "vladimir.muzyka@gmail.com" }]
requires-python = ">=3.8.0,<4"
dependencies = [
    "fastapi[standard]",
    "paramiko",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "docker",
    "httpx",
    "pytest",
    "ruff",
    "scapy",
]

[tool.uv]
package = false
